fix: fix spacing in the AccordionItem

--- a/packages/logos-docusaurus-theme/src/client/components/mdx/AccordionItem/AccordionItem.scss
+++ b/packages/logos-docusaurus-theme/src/client/components/mdx/AccordionItem/AccordionItem.scss
@@ -36,6 +36,7 @@
 .mdx-accordion-item--open {
   .mdx-accordion-item__content {
     height: auto;
+    padding-top: 6px;
     padding-bottom: 1.875rem;
   }
 }
